<resources>
    <string name="app_name">Fact Book</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Prev</string>
    <string name="share_button">Share Fact</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome_text">Hi! Select categories from menu or click Start for random facts.</string>
    <string name="overflow_menu_watch_ad_request">Watch an ad for me</string>
    <string name="solar_system">Solar system</string>
    <string name="car">Cars</string>
    <string name="category_navmenu">Category</string>
    <string name="overflow_menu_rate_us">Rate us</string>
    <string name="author_name">By Kuldeep Chilwal</string>
    <string name="about_text">Hi reader! I\'m an engineer by profession and Indian by heart. This app is a project I took to provide you with some cool facts about things we see everyday without the intrusive full screen ads! Hope you are enjoying it! This is just a beginning, stay with me because I\'ll be pushing some major updates soon! Keep sharing the app! Thank You :)</string>
    <string name="author_image_content_description">"Image of app's author "</string>
    <string name="about">About</string>
    <string name="overflow_menu_about">About</string>
    <string name="smartphone">Smartphone</string>
    <string name="human">Human</string>
    <string name="dog">Dog</string>
    <string name="spaceExplore">Space Exploration</string>
    <string name="cat">Cat</string>
    <string name="insect">Insects</string>
    <string name="shoes">Shoes</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="car1">The average fuel cost across all vehicles is 14.45 cents per mile, or about 23 miles per gallon!</string>
    <string name="car2">The best selling car of all-time is the Toyota Corolla!</string>
    <string name="car3">It would take less than a month to get to the moon by car!</string>
    <string name="car4">The U.S. consumes about half of the world’s gasoline!</string>
    <string name="car5">Ferrari manufactures a maximum of 14 cars a day!</string>
    <string name="car6">The average consumer spends $400 a year on diagnostics, scheduled maintenance, and tune-ups!</string>
    <string name="car7">The first windshield wipers were hand-operated!</string>
    <string name="car8">White is the most popular car color!</string>
    <string name="car9">The first cars did not have steering wheels. They were operated by a lever!</string>
    <string name="car10">It takes half an ounce of gas to start a car!</string>
    <string name="car11">The world’s first speeding ticket was issued in 1902!</string>
    <string name="car12">1 in 4 cars on the UK’s road were made in China!</string>
    <string name="car13">A modern Formula 1 car can drive upside down in a tunnel at 120mph!</string>
    <string name="car14">60 million cars are produced every year!</string>
    <string name="car15">The average car contains over 30,000 unique parts!</string>
    <string name="car16">75% of all cars produced by Rolls Royce are still on the road!</string>
    <string name="car17">The largest speeding fine ever produced was €1,000,000!</string>
    <string name="car18">The world record for removing and replacing a car engine is 42 seconds!</string>
    <string name="car19">The odds of dying in a car accident are around 1 in 5,000!</string>
    <string name="car20">The man who invented cruise control was blind!</string>
    <string name="car21">The highest total mileage clocked by a single car is 2,850,000 million miles!</string>
    <string name="car22">In 1916, 55% of all the cars in the WORLD were Model T Fords!</string>
    <string name="car23">Porsche’s first car was electric!</string>
    <string name="car24">South African drivers have the option to install flamethrowers on their cars!</string>
    <string name="car25">Whale oil was used in some car transmissions until 1973!</string>
    <string name="car26">The Ford F150 is programmed with over 150 million lines of code!</string>
    <string name="car27">U.S. auto production nearly stopped entirely during World War II!</string>
    <string name="solarsystem1">Pluto is smaller in diameter than the U.S!</string>
    <string name="solarsystem2">You can make volcanos using water as magma! </string>
    <string name="solarsystem3">The edge of the solar system is 1,000 times farther away than Pluto!</string>
    <string name="solarsystem4">Almost everything on Earth is a rare element! </string>
    <string name="solarsystem5"> Jupiter has the biggest ocean of any planet, albeit made of metallic hydrogen!</string>
    <string name="solarsystem6"> The hottest planet isn’t closest to the sun!</string>
    <string name="solarsystem7"> We live inside the sun!</string>
    <string name="solarsystem8"> Jupiter has had the same ongoing storm for 300 years and counting!</string>
    <string name="solarsystem9"> Neptune experiences wind speeds as fast as 1,600mph!</string>
    <string name="solarsystem10">You can grow as much as 5cm taller in space compared to on Earth!</string>
    <string name="solarsystem11">Venus the second brightest object in the night sky after the Moon!</string>
    <string name="solarsystem12">All planets were named after Roman and Greek gods and goddesses, except the Earth!</string>
    <string name="solarsystem13">Mars has two moons called Phobos and Deimos!</string>
    <string name="solarsystem14">Uranus is the second furthest planet from the Sun!</string>
    <string name="solarsystem15">It takes Uranus roughly 84 years to orbit once around the Sun! </string>
    <string name="solarsystem16">Mercury and Venus are the only 2 planets in our solar system that have no moons!</string>
    <string name="solarsystem17">If a star passes too close to a black hole, it can be torn apart!</string>
    <string name="solarsystem18">The hottest planet in our solar system is Venus!</string>
    <string name="solarsystem19">Our solar system is 4.57 billion years old!</string>
    <string name="solarsystem20">The Milky Way galaxy is 105,700 light-years wide!</string>
    <string name="solarsystem21">There are 79 known moons orbiting Jupiter!</string>
    <string name="smartphone1">The best-selling mobile phone is the Nokia 1100!</string>
    <string name="smartphone2">In Ads, iPhones are Always Set to 9:41!</string>
    <string name="smartphone3">The term Bluetooth comes from a Nordic king!</string>
    <string name="smartphone4">There is a mobile phone out in space!</string>
    <string name="smartphone5">Android Represents More Than 80% of the OS Market!</string>
    <string name="smartphone6">The first call from a mobile phone was made on April 3, 1973!</string>
    <string name="smartphone7">There is an addiction to mobile phones and it’s called nomophobia!</string>
    <string name="smartphone8">We check our mobile phone about 150 times a day on average!</string>
    <string name="smartphone9">There are already more mobile phones than people in our world!</string>
    <string name="smartphone10">Mobile phones contain many more bacteria than a toilet flush!</string>
    <string name="smartphone11">The first Android phone was T-Mobile G1, aka HTC Dream introduced in the year 2008!</string>
    <string name="smartphone12">Google was prototyping their mobile software on a device known as the “Sooner“!</string>
    <string name="smartphone13">In the year 2012, Apple sold 340,000 iPhones per day! </string>
    <string name="smartphone14">The Telephone Exchanges were the first setup in the US and they mentioned ‘Hello’ as the standard way to start a conversation on a phone in their manuals, which was then adopted world wide.</string>
    <string name="smartphone15">Apple was the first to include the front-facing camera on a smartphone with iPhone 4 in 2010!</string>
    <string name="smartphone16"> iPhone was the first smartphone to feature a successful Facetime Video Calling!</string>
    <string name="smartphone17">90 percent of the phones in Japan are waterproof!</string>
    <string name="smartphone18"> Nokia 1100 was the only product in the history of electrical gadgets. It sold more than 250 million mobile phones!</string>
    <string name="smartphone19">In the United Kingdom, more than one million Smartphone people accidentally fall into the toilet every year!</string>
    <string name="smartphone20">90 percent of the world’s messages are read within 3 minutes of sending!</string>
    <string name="human1">An average person breathes in around 11,000 litres of air every day!</string>
    <string name="human2">Your nose and ears continue growing throughout your entire life!</string>
    <string name="human3">Your sense of smell is around 10,000 times more sensitive than your sense of taste!</string>
    <string name="human4">The brain uses over a quarter of the oxygen used by the human body!</string>
    <string name="human5">The brain of an adult human weighs around 3 pounds (1.5 kg). Although it makes up just 2 per cent of the body’s weight, it uses around 20 per cent of its energy!</string>
    <string name="human6">When listening to music, your heartbeat will sync with the rhythm!</string>
    <string name="human7">In one year, a human heart would pump enough blood to fill an Olympic size pool!</string>
    <string name="human8">A large amount of the dust in your home is actually dead skin. Humans shed about 600,000 particles of skin every hour!</string>
    <string name="human9"> As well as having unique fingerprints, humans also have unique tongue prints!</string>
    <string name="human10">The cornea is the only part of the body with no blood supply – it gets its oxygen directly from the air!</string>
    <string name="human11">The liver is a serious multi-tasker, carrying out over 500 different roles!</string>
    <string name="human12">Every day the heart creates enough energy to drive a truck 20 miles!</string>
    <string name="human13">The average heart beats 80 times a minute! This adds up to around 115,000 times a day, or 42 million times a year!</string>
    <string name="human14">You’re more likely to have a heart attack on a Monday then on any other day of the week!</string>
    <string name="human15">There’s a one in three chance that your first heart attack will be your last!</string>
    <string name="human16">A females heart is smaller than a males by about 25%!</string>
    <string name="human17">It’s not just your cheeks that turn red and expose your embarrassment when you’re blushing. Your stomach also turns red, but not many people will notice this!</string>
    <string name="human18">Every 3–4 seconds, around 50,000 cells in your body will die and be replaced by new ones!</string>
    <string name="human19">It’s scientifically proven that children grow faster in the spring!</string>
    <string name="human20">After a long day at work, you will be around 8mm shorter than you were in the morning!</string>
    <string name="dog1"> Three dogs survived the Titanic sinking!</string>
    <string name="dog2">A Bloodhound’s sense of smell can be used as evidence in court!</string>
    <string name="dog3">Basenji dogs don’t bark, they yodel!</string>
    <string name="dog4">A Greyhound could beat a Cheetah in a long distance race!</string>
    <string name="dog5">30% of Dalmatians are deaf in one ear!</string>
    <string name="dog6">The Saluki is the oldest dog breed!</string>
    <string name="dog7">Dogs have three eyelids!</string>
    <string name="dog8">Dogs noses are wet to help absorb scent chemicals!</string>
    <string name="themes_header">Theme</string>
    <string name="notification_header">Notification</string>
    <string name="daily_notification_enabled">Daily notification</string>
    <string name="select_theme_pref">Select theme</string>
</resources>