<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/category_navmenu">
        <menu>
            <item
                android:id="@+id/carFactsFragment"
                android:title="@string/car" />
            <item
                android:id="@+id/solarSystemFragment"
                android:title="@string/solar_system" />
            <item
                android:id="@+id/smartphoneFragment"
                android:title="@string/smartphone" />
            <item
                android:id="@+id/humanFragment"
                android:title="@string/human" />
            <item
                android:id="@+id/dogFragment"
                android:title="@string/dog" />
            <item
                android:id="@+id/spaceExplorationFragment"
                android:title="@string/spaceExplore" />
            <item
                android:id="@+id/catFragment"
                android:title="@string/cat" />
            <item
                android:id="@+id/insectsFragment"
                android:title="@string/insect" />
            <item
                android:id="@+id/shoesFragment"
                android:title="@string/shoes" />
            <item
                android:id="@+id/motorcycleFragment"
                android:title="@string/motorcycle" />

        </menu>
    </item>
    <item android:title="@string/rate_us_navmenu" />
    <item android:title="@string/watch_ad_request"></item>
</menu>