<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        style="@style/layoutForFragments">

        <Button
            android:id="@+id/ShareButton"
            style="@style/shareButton"
            android:text="@string/share_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NextButton" />

        <TextView
            android:id="@+id/Fact"
            style="@style/HomeTextStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/welcome_text"
            android:gravity="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/NextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:id="@+id/NextButton"
            android:text="@string/next_button"
            app:layout_constraintBottom_toTopOf="@+id/ShareButton"
            app:layout_constraintEnd_toStartOf="@+id/PreviousButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Fact"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="4dp" />

        <Button
            android:id="@+id/PreviousButton"
            android:text="@string/previous_button"
            app:layout_constraintBottom_toBottomOf="@+id/NextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/NextButton"
            app:layout_constraintTop_toTopOf="@+id/NextButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="4dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>