<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".smartphone">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/layoutForFragments"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/smartphoneTextview"
            style="@style/layoutForFragments"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/smartphoneNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:id="@+id/smartphonePrevious"
            style="@style/PreviousNextButton"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/previous_button"
            app:layout_constraintBottom_toBottomOf="@+id/smartphoneNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/smartphoneNext"
            app:layout_constraintTop_toTopOf="@+id/smartphoneNext" />

        <Button
            android:id="@+id/smartphoneNext"
            style="@style/PreviousNextButton"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/next_button"
            app:layout_constraintBottom_toTopOf="@+id/smartphoneShare"
            app:layout_constraintEnd_toStartOf="@+id/smartphonePrevious"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/smartphoneTextview" />

        <Button
            android:id="@+id/smartphoneShare"
            style="@style/shareButton"
            android:layout_width="231dp"
            android:layout_height="68dp"
            android:text="@string/share_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/smartphoneNext" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>